--- a/src/Stylesheets/filters.css
+++ b/src/Stylesheets/filters.css
@@ -28,8 +28,17 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  overflow: scroll;
+
   scrollbar-width: thin;
+  height: 90vh;
+}
+
+.nav-filter-wrapper {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0px;
+  height: 100vh;
+  /* background-color: #f0f0c94d; */
 }
 
 .nav-filters {
@@ -39,8 +48,8 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  /* max-height: 500px */
-  /* min-height: 70vh; */
+  overflow: scroll;
+  height: 90vh;
   width: 256px;
   padding: 0 2px;
   border-right: solid 1px #114a74;
