--- a/src/Stylesheets/media-queries.css
+++ b/src/Stylesheets/media-queries.css
@@ -2,18 +2,52 @@
 
 @media (max-width: 640px) {
   .app-header {
-    /* flex-direction: column; */
+    padding: 8px;
   }
 
-  .nav-filters {
+  .body-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
+    align-items: center;
+    max-width: 100vw;
+    padding: 1px;
+    margin: 0 auto;
+  }
+
+  .beer-list {
+    /* grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); */
+    margin: 8px;
+  }
+
+  .nav-options {
+    height: 50px;
+    width: 96vw;
+    font-size: 0.1em;
+    overflow: hidden;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 4px;
+  }
+
+  .nav-filter-wrapper {
+    overflow: visible;
     position: absolute;
     left: 0;
-    top: 13vh;
+    top: 16vh;
+    z-index: 10;
+    width: 100vw;
+    background-color: #aaaa9854;
+  }
+  .nav-filters {
+    position: -webkit-sticky;
+    position: sticky;
     z-index: 10;
     margin: 50px 0;
     border-radius: 0px 5px 5px 0px;
-    box-shadow: 5px 0px 10px 1px #f0f0c9;
-    border: solid 1px #114a74;
+    box-shadow: -1px -1px 5px #00000038, 0px 3px 2px #00000038,
+      6px -6px 8px 3px #f0f0c9b2;
+    border: solid 0px #114a74;
     background-color: #f0f0c9;
   }
 
